Finally figured out View Names. (I think), and added "Process File" checkbox to the screen. Testing for both Coon Rapids and Anoka files works. Need to test Profile Files next...

--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,10 +1,11 @@
 [Paths]
 outputrootpath = C:\TEST\Output\
 inputrootpath = C:\TEST\INPUT\
+reportingrootpath = S:\Micro-Vu\
 
 [UserSettings]
 initials = JTW
 
 [Location]
-site = CoonRapids
+site = Anoka
 
