Finally figured out View Names. (I think), and added "Process File" checkbox to the screen. Testing for both Coon Rapids and Anoka files works. Need to test Profile Files next...

--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,11 +1,16 @@
 [Paths]
-outputrootpath = C:\TEST\Output\
-inputrootpath = C:\TEST\INPUT\
-reportingrootpath = S:\Micro-Vu\
+OutputRootPath = C:\TEST\Output\
+InputRootPath = C:\TEST\INPUT\
+ReportingRootPath = S:\Micro-Vu\
+SmartProfileScriptFilePath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
+SmartProfileExeFilePath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
+
+
 
 [UserSettings]
 initials = JTW
 
 [Location]
+;Legal values are CoonRapids and Anoka
 site = Anoka
 
