--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,16 +1,13 @@
 [Paths]
-OutputRootPath = C:\TEST\Output\
-InputRootPath = C:\TEST\INPUT\
-ReportingRootPath = S:\Micro-Vu\
-SmartProfileScriptFilePath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
-SmartProfileExeFilePath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
-
-
+outputrootpath = C:\TEST\Output\
+inputrootpath = C:\TEST\INPUT\
+reportingrootpath = S:\Micro-Vu\
+smartprofilescriptfilepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
+smartprofileexefilepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 
 [UserSettings]
 initials = JTW
 
 [Location]
-;Legal values are CoonRapids and Anoka
-site = Anoka
+site = CoonRapids
 
