--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,6 +1,6 @@
 [Paths]
 outputrootpath = C:\TEST\Output\
-inputrootpath = C:\TEST\INPUT\
+inputrootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 reportingrootpath = S:\Micro-Vu\
 smartprofilescriptfilepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smartprofileexefilepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
