--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,13 +1,16 @@
 [Paths]
-outputrootpath = C:\TEST\Output\
-inputrootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
-reportingrootpath = S:\Micro-Vu\
-smartprofilescriptfilepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
-smartprofileexefilepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
+output_rootpath = C:\TEST\Output\
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
+reporting_root_path = S:\Micro-Vu\
+smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
+smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 
 [UserSettings]
 initials = JTW
 
 [Location]
 site = CoonRapids
+
+[GlobalSettings]
+dimension_root = #
 
