--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,12 +1,13 @@
+[UserSettings]
+initials = JTW
+
 [Paths]
 output_rootpath = C:\TEST\Output\
-input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
+input_rootpath = C:\TEST\Input
 reporting_root_path = S:\Micro-Vu\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
-
-[UserSettings]
-initials = JTW
+archive_root_directory = C:\TEST\Archive
 
 [Location]
 site = CoonRapids
