--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -5,7 +5,7 @@ initials = JTW
 output_rootpath = C:\TEST\Output\
 input_rootpath = C:\TEST\Input
 reporting_root_path = S:\Micro-Vu\
-smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts
+smart_profile_directory = C:\TEST\SmartProfiles\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 archive_root_directory = C:\TEST\Archive
