--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -2,18 +2,32 @@
 initials = JTW
 
 [Paths]
-output_rootpath = C:\TEST\Output\
-input_rootpath = C:\TEST\Input
 reporting_root_path = S:\Micro-Vu\
-smart_profile_directory = C:\TEST\SmartProfiles\
+smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
-archive_root_directory = C:\TEST\Archive
+output_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\1Factory\
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
+archive_root_directory = V:\Inspect Programs\Micro-Vu Archive\Micro-Vu Archive\
 
 [Location]
 site = CoonRapids
 
 [GlobalSettings]
 dimension_root = INSP_
-add_hash_to_beginning_of_file = False
 
+[TestPaths]
+message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
+message2 = I have to do this because any comments I put in here get removed every time the app runs.
+message3 = Below are the "test" values. Replace the lines in [Paths] with the ones below to test the application.
+output_rootpath = C:\TEST\Output\
+input_rootpath = C:\TEST\Input\
+archive_root_directory = C:\TEST\Archive\
+
+[RealPaths]
+message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
+message2 = I have to do this because any comments I put in here get removed every time the app runs.
+message3 = Below are the "real" values. Replace the lines in [Paths] with the ones below before you release to production.
+output_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\1Factory\
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
+archive_root_directory = V:\Inspect Programs\Micro-Vu Archive\Micro-Vu Archive\
