--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -20,9 +20,9 @@ dimension_root = INSP_
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
 message2 = I have to do this because any comments I put in here get removed every time the app runs.
 message3 = Below are the "test" values. Replace the lines in [Paths] with the ones below to test the application.
-output_rootpath = C:\TEST\Output\
-input_rootpath = C:\TEST\Input\
-archive_root_directory = C:\TEST\Archive\
+output_rootpath = C:\TEST\MVConversion\Output\
+input_rootpath = C:\TEST\MVConversion\Input\
+archive_root_directory = C:\TEST\MVConversion\Archive\
 
 [RealPaths]
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
