--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -6,7 +6,7 @@ reporting_root_path = S:\Micro-Vu\
 smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
-output_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\1Factory\
+output_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\<mvv>\1Factory\
 input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 archive_root_directory = V:\Inspect Programs\Micro-Vu Archive\Micro-Vu Archive\
 
@@ -28,6 +28,7 @@ archive_root_directory = C:\TEST\MVConversion\Archive\
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
 message2 = I have to do this because any comments I put in here get removed every time the app runs.
 message3 = Below are the "real" values. Replace the lines in [Paths] with the ones below before you release to production.
-output_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\1Factory\
+output_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\<mvv>\1Factory\
 input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 archive_root_directory = V:\Inspect Programs\Micro-Vu Archive\Micro-Vu Archive\
+
