--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -11,7 +11,7 @@ archive_root_directory = C:\TEST\MVConversion\Archive\
 initials = JTW
 
 [Location]
-site = CoonRapids
+site = Anoka
 
 [GlobalSettings]
 dimension_root = INSP_
