--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -5,7 +5,7 @@ smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\S
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
 input_rootpath = C:\TEST\MVConversion\Input\
-archive_root_directory = C:\TEST\MVConversion\Archive\
+
 
 [UserSettings]
 initials = JTW
@@ -23,13 +23,23 @@ message2 = I have to do this because any comments I put in here get removed ever
 message3 = Below are the "test" values. Replace the lines in [Paths] with the ones below to test the application.
 output_rootpath = C:\TEST\MVConversion\Output\
 input_rootpath = C:\TEST\MVConversion\Input\
-archive_root_directory = C:\TEST\MVConversion\Archive\
 
-[RealPaths]
-message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
-message2 = I have to do this because any comments I put in here get removed every time the app runs.
-message3 = Below are the "real" values. Replace the lines in [Paths] with the ones below before you release to production.
+
+[CoonRapids Settings]
+message = This is just a way to keep the CoonRapids' settings when I change out settings when compiling for CoonRapids or Anoka. They won't actually be read.
+reporting_root_path = S:\Micro-Vu\
+smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
+smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
+smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
 input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
-archive_root_directory = V:\Inspect Programs\Micro-Vu Archive\Micro-Vu Archive\
 
+
+[Anoka Settings]
+message = This is just a way to keep the Anoka's settings when I change out settings when compiling for CoonRapids or Anoka. They won't actually be read.
+reporting_root_path = S:\Micro-Vu\
+smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
+smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
+smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
+output_rootpath = C:\TEST\MVConversion\Output\
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
