--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,11 +1,10 @@
 [Paths]
-message = This is just a way to keep the CoonRapids' settings when I change out settings when compiling for CoonRapids or Anoka. They won't actually be read.
 reporting_root_path = S:\Micro-Vu\
 smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = C:\TEST\MVConversion\Input\
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 
 [UserSettings]
 initials = JTW
