will have to fix some stuff for anoka.

--- a/test/TESTSettings.ini
+++ b/test/TESTSettings.ini
@@ -1,13 +1,13 @@
 [UserSettings]
-initials = CMY
+initials = QFZ
 
 [Paths]
 reporting_root_path = S:\Micro-Vu\
 smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
-output_rootpath = D:\OneDrive\Projects\Automation\MicroVu1FConversion\test\Output
-input_rootpath = D:\OneDrive\Projects\Automation\MicroVu1FConversion\test\Input
+output_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Output
+input_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Input
 
 [Location]
 site = CoonRapids
