--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -4,7 +4,8 @@ smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart P
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = C:\TEST\MVConversion\Input\
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
+
 
 [UserSettings]
 initials = JTW
