Adding Processor Tests

--- a/test/TESTSettings.ini
+++ b/test/TESTSettings.ini
@@ -1,6 +1,3 @@
-[UserSettings]
-initials = LYF
-
 [Paths]
 reporting_root_path = S:\Micro-Vu\
 smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
@@ -8,6 +5,9 @@ smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\S
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Output
 input_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Input
+
+[UserSettings]
+initials = CFU
 
 [Location]
 site = CoonRapids
