--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -4,17 +4,17 @@ smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart P
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
+input_rootpath = C:\TEST\MVConversion\Input\
 
 [UserSettings]
 initials = JTW
 
 [Location]
-site = CoonRapids
+site = Anoka
 
 [GlobalSettings]
 dimension_root = INSP_
-hand_edit_dimension_names = False
+hand_edit_dimension_names = True
 
 [TestPaths]
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
