--- a/test/TESTSettings.ini
+++ b/test/TESTSettings.ini
@@ -1,3 +1,6 @@
+[UserSettings]
+initials = QFB
+
 [Paths]
 reporting_root_path = S:\Micro-Vu\
 smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
@@ -6,13 +9,10 @@ smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\Sm
 output_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Output
 input_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Input
 
-[UserSettings]
-initials = CFU
-
-[Location]
-site = CoonRapids
-
 [GlobalSettings]
 dimension_root = INSP_
 hand_edit_dimension_names = False
+
+[Location]
+site = CoonRapids
 
