Finally freaking done with creating tests. 201 total. Oh, wait... I still have to make tests for the UI. Crap.

--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -4,17 +4,17 @@ smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart P
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = C:\TEST\MVConversion\Input\
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 
 [UserSettings]
 initials = JTW
 
 [Location]
-site = Anoka
+site = CoonRapids
 
 [GlobalSettings]
 dimension_root = INSP_
-hand_edit_dimension_names = True
+hand_edit_dimension_names = False
 
 [TestPaths]
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
@@ -34,9 +34,9 @@ input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 
 [Anoka Settings]
 message = This is just a way to keep the Anoka's settings when I change out settings when compiling for CoonRapids or Anoka. They won't actually be read.
-reporting_root_path = Z:\Inspect Programs\Metrology Printouts\Micro Vu\
-smart_profile_directory = Z:\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\
-smart_profile_script_filepath = Z:\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\OneFactorySP_5.0.8.py
+reporting_root_path = P:\Inspect Programs\Metrology Printouts\Micro Vu\
+smart_profile_directory = P:\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\
+smart_profile_script_filepath = P:\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\OneFactorySP_5.0.8.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
 input_rootpath = Z:\Inspect Programs\MicroVu\Approved Programs\
