--- a/test/TESTSettings.ini
+++ b/test/TESTSettings.ini
@@ -1,5 +1,9 @@
-[UserSettings]
-initials = POP
+[GlobalSettings]
+dimension_root = INSP_
+hand_edit_dimension_names = False
+
+[Location]
+site = CoonRapids
 
 [Paths]
 reporting_root_path = S:\Micro-Vu\
@@ -9,10 +13,6 @@ smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\Sm
 output_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Output
 input_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Input
 
-[GlobalSettings]
-dimension_root = INSP_
-hand_edit_dimension_names = False
-
-[Location]
-site = CoonRapids
+[UserSettings]
+initials = ZHU
 
