--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -15,6 +15,7 @@ site = CoonRapids
 [GlobalSettings]
 dimension_root = INSP_
 hand_edit_dimension_names = False
+allow_delete = False
 
 [TestPaths]
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
