--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -16,6 +16,7 @@ site = CoonRapids
 dimension_root = INSP_
 hand_edit_dimension_names = False
 allow_delete = False
+disable_on_convert=False
 
 [TestPaths]
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
