--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -31,7 +31,7 @@ reporting_root_path = S:\Micro-Vu\
 smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
-output_rootpath = C:\TEST\MVConversion\Output\
+output_rootpath = X:\Quality Calibration\Work in Progress\Jeffrey\1Factory Conversion\311
 input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 
 [Anoka Settings]
