--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -22,8 +22,8 @@ disable_on_convert=False
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
 message2 = I have to do this because any comments I put in here get removed every time the app runs.
 message3 = Below are the "test" values. Replace the lines in [Paths] with the ones below to test the application.
-output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = C:\TEST\MVConversion\Input\
+output_rootpath = X:\Quality Calibration\Work in Progress\Jeffrey\1Factory Conversion\311
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 
 [CoonRapids Settings]
 message = This is just a way to keep the CoonRapids' settings when I change out settings when compiling for CoonRapids or Anoka. They won't actually be read.
