Found a bug for anoka. Specifically, they were using Comma as a delimeter and I wasn't checking for it.

--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,7 +1,7 @@
 [Paths]
 reporting_root_path = \\vrmss-fs1\dnc\Inspect Programs\Metrology Printouts\Micro Vu\
-smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\
-smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\OneFactorySP_5.0.8.py
+smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\
+smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\OneFactorySP_5.0.8.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
 input_rootpath = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\
@@ -37,9 +37,8 @@ input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 [Anoka Settings]
 message = This is just a way to keep the Anoka's settings when I change out settings when compiling for CoonRapids or Anoka. They won't actually be read.
 reporting_root_path = \\vrmss-fs1\dnc\Inspect Programs\Metrology Printouts\Micro Vu\
-smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\
-smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\Y-010\_SMART PROFILE\Smart Profile Project\OneFactorySP_5.0.8.py
+smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\
+smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\OneFactorySP_5.0.8.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
 input_rootpath = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\
-
