Found a bug for anoka. Specifically, they were using Comma as a delimeter and I wasn't checking for it.

--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -4,7 +4,7 @@ smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Sma
 smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\OneFactorySP_5.0.8.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\
+input_rootpath = C:\TEST\MVConversion\Input\311\
 
 [UserSettings]
 initials = JTW
@@ -15,7 +15,7 @@ site = Anoka
 [GlobalSettings]
 dimension_root = INSP_
 hand_edit_dimension_names = True
-allow_delete = False
+allow_delete = True
 disable_on_convert = True
 
 [TestPaths]
@@ -42,3 +42,5 @@ smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\1Factory Progra
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
 output_rootpath = C:\TEST\MVConversion\Output\
 input_rootpath = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\
+bring_to_metrology_path = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Setup Photos VMM\Bring part to Metrology.JPG
+
