--- a/test/TESTSettings.ini
+++ b/test/TESTSettings.ini
@@ -1,9 +1,11 @@
 [GlobalSettings]
 dimension_root = INSP_
 hand_edit_dimension_names = False
+allow_delete = False
+disable_on_convert = False
 
 [Location]
-site = CoonRapids
+site = Anoka
 
 [Paths]
 reporting_root_path = S:\Micro-Vu\
@@ -14,5 +16,5 @@ output_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Ou
 input_rootpath = C:\Users\JTWhitney\PycharmProjects\MicroVu1FConversion\test\Input
 
 [UserSettings]
-initials = ZHU
+initials = JIT
 
