Found a bug for anoka. Specifically, they were using Comma as a delimeter and I wasn't checking for it.

--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -3,8 +3,8 @@ reporting_root_path = \\vrmss-fs1\dnc\Inspect Programs\Metrology Printouts\Micro
 smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\
 smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\OneFactorySP_5.0.8.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
-output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = C:\TEST\MVConversion\Input\311\
+output_rootpath = X:\Quality Calibration\Work in Progress\Anoka\MC2205501\Converted\
+input_rootpath = C:\TEST\MVConversion\Input\
 
 [UserSettings]
 initials = JTW
