Found a bug for anoka. Specifically, they were using Comma as a delimeter and I wasn't checking for it.

--- a/test/TESTSettings.ini
+++ b/test/TESTSettings.ini
@@ -5,7 +5,7 @@ allow_delete = False
 disable_on_convert = False
 
 [Location]
-site = Anoka
+site = CoonRapids
 
 [Paths]
 reporting_root_path = S:\Micro-Vu\
