--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -1,16 +1,16 @@
 [Paths]
-reporting_root_path = \\vrmss-fs1\dnc\Inspect Programs\Metrology Printouts\Micro Vu\
-smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\
-smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\OneFactorySP_5.0.8.py
-smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
-output_rootpath = X:\Quality Calibration\Work in Progress\Anoka\MC2205501\Converted\
-input_rootpath = C:\TEST\MVConversion\Input\
+reporting_root_path = S:\Micro-Vu\
+smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
+smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
+smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
+output_rootpath = X:\Quality Calibration\Work in Progress\Jeffrey\1Factory Conversion\311
+input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 
 [UserSettings]
 initials = JTW
 
 [Location]
-site = Anoka
+site = CoonRapids
 
 [GlobalSettings]
 dimension_root = INSP_
@@ -40,7 +40,6 @@ reporting_root_path = \\vrmss-fs1\dnc\Inspect Programs\Metrology Printouts\Micro
 smart_profile_directory = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\
 smart_profile_script_filepath = \\vrmss-fs1\dnc\Inspect Programs\1Factory Programs\Smart Profile\OneFactorySP_5.0.8.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v5.0.8.0 x64\SmartProfile.exe
-output_rootpath = C:\TEST\MVConversion\Output\
-input_rootpath = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Approved Programs\
-bring_to_metrology_path = \\vrmss-fs1\dnc\Inspect Programs\MicroVu\Setup Photos VMM\Bring part to Metrology.JPG
+output_rootpath = X:\Quality Calibration\Work in Progress\Anoka\MC2205501\Converted\
+input_rootpath = C:\TEST\MVConversion\Input\
 
