--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -5,6 +5,7 @@ smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\S
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
 output_rootpath = X:\Quality Calibration\Work in Progress\Jeffrey\1Factory Conversion\311
 input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
+export_path = Z:\
 
 [UserSettings]
 initials = JTW
@@ -14,9 +15,9 @@ site = CoonRapids
 
 [GlobalSettings]
 dimension_root = INSP_
-hand_edit_dimension_names = True
-allow_delete = True
-disable_on_convert = True
+hand_edit_dimension_names = False
+allow_delete = False
+disable_on_convert = False
 
 [TestPaths]
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
