Added the Mega Conversion MicroVu Thingy Bob

--- a/lib/Settings.ini
+++ b/lib/Settings.ini
@@ -3,7 +3,7 @@ reporting_root_path = S:\Micro-Vu\
 smart_profile_directory = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\
 smart_profile_script_filepath = V:\Inspect Programs\Micro-Vu\Approved Programs\Smart Profile\Scripts\OneFactorySP.py
 smart_profile_exe_filepath = C:\Program Files\Kotem\SmartProfile v4.5.2.0 x64\SmartProfile.exe
-output_rootpath = X:\Quality Calibration\Work in Progress\Jeffrey\1Factory Conversion\311
+output_rootpath = V:\Inspect Programs\Micro-Vu\1Factory_Untested\311
 input_rootpath = V:\Inspect Programs\Micro-Vu\Approved Programs\
 export_path = Z:\
 
@@ -18,6 +18,7 @@ dimension_root = INSP_
 hand_edit_dimension_names = False
 allow_delete = False
 disable_on_convert = False
+remove_bring_to_metrology_pic = True
 
 [TestPaths]
 message = This is a BS section which will never be used. It's just so that I can copy the stuff to the real "Paths" section (above)
